--- a/Chat.ipynb
+++ b/Chat.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Мы собираемся работать с vk в python3. Поэтому из терминала сначала (если ещё не установлены) стоит установить из нужные библиотеки:"
+    "Мы собираемся работать с vk в python3. Поэтому из терминала сначала (если ещё не установлены) стоит установить нужные библиотеки:"
    ]
   },
   {
